# AlphaBacktestingSystem

./: CMakeLists.txt  LICENSE  Makefile  README.md
data/: NKLA.csv
src/: Backtester.cpp  Backtester.h  Metrics.cpp  Metrics.h  MomentumStrategy.cpp  MomentumStrategy.h  Order.h  Portfolio.cpp  Portfolio.h  Strategy.h  dataProcessing.cpp  dataProcessing.h  main.cpp
